@@ -1,3 +1,9 @@
+2005-07-25  Dave Odell  <evilalias@hotmail.com>
+
+	PR libstdc++/23053
+	* include/tr1/hashtable (hashtable<>::find_node): Const-ify.
+	* testsuite/tr1/6_containers/unordered/hashtable/23053.cc: New.
+
 2005-07-25  Paolo Carlini  <pcarlini@suse.de>
 
 	PR libstdc++/22515
